--- a/site/public/index.html
+++ b/site/public/index.html
@@ -18,7 +18,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Serverless Fullstack Application</title>
+    <title>Tulip Shop Tavern</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
